Added logout option