@@ -11,6 +11,7 @@ import ru.liga.config.QueryData;
 import ru.liga.domain.SexType;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -20,11 +21,17 @@ public class KeyboardService {
     private final TextMessageService textMessageService;
 
     public InlineKeyboardMarkup getInMenuKeyboard() {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         InlineKeyboardButton searchButton = createInlineButton(textMessageService.getText("button.menu.search"), QueryData.SEARCH);
         InlineKeyboardButton favoritesButton = createInlineButton(textMessageService.getText("button.menu.favorites"), QueryData.FAVORITES);
         InlineKeyboardButton profileButton = createInlineButton(textMessageService.getText("button.menu.profile"), QueryData.PROFILE);
-        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(searchButton, profileButton, favoritesButton);
+        InlineKeyboardButton logoutButton = createInlineButton(textMessageService.getText("button.menu.logout"), QueryData.LOGOUT);
+
+        return getInlineKeyboardMarkup(searchButton, favoritesButton, profileButton, logoutButton);
+    }
+
+    private InlineKeyboardMarkup getInlineKeyboardMarkup(InlineKeyboardButton... buttons) {
+        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
+        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(buttons);
         List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
         keyboard.add(buttonsRow);
         inlineKeyboardMarkup.setKeyboard(keyboard);
@@ -32,26 +39,18 @@ public class KeyboardService {
     }
 
     public InlineKeyboardMarkup getMySexKeyboard() {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         InlineKeyboardButton maleButton = createInlineButton(textMessageService.getText("button.sexType.male"), String.valueOf(SexType.MALE));
         InlineKeyboardButton femaleButton = createInlineButton(textMessageService.getText("button.sexType.female"), String.valueOf(SexType.FEMALE));
-        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(maleButton, femaleButton);
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(buttonsRow);
-        inlineKeyboardMarkup.setKeyboard(keyboard);
-        return inlineKeyboardMarkup;
+
+        return getInlineKeyboardMarkup(maleButton, femaleButton);
     }
 
     public InlineKeyboardMarkup getLookingForKeyboard() {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         InlineKeyboardButton maleButton = createInlineButton(textMessageService.getText("button.lookingFor.male"), String.valueOf(SexType.MALE));
         InlineKeyboardButton femaleButton = createInlineButton(textMessageService.getText("button.lookingFor.female"), String.valueOf(SexType.FEMALE));
         InlineKeyboardButton allButton = createInlineButton(textMessageService.getText("button.lookingFor.all"), QueryData.ALL);
-        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(maleButton, femaleButton, allButton);
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(buttonsRow);
-        inlineKeyboardMarkup.setKeyboard(keyboard);
-        return inlineKeyboardMarkup;
+
+        return getInlineKeyboardMarkup(maleButton, femaleButton, allButton);
     }
 
     private List<InlineKeyboardButton> createInlineButtonsRow(InlineKeyboardButton... buttons) {
@@ -70,7 +69,7 @@ public class KeyboardService {
         rowRegistrationOrLogin.add(new KeyboardButton(textMessageService.getText("button.registration")));
         rowRegistrationOrLogin.add(new KeyboardButton(textMessageService.getText("button.login")));
         ReplyKeyboardMarkup keyboard = new ReplyKeyboardMarkup();
-        keyboard.setKeyboard(List.of(rowRegistrationOrLogin));
+        keyboard.setKeyboard(Collections.singletonList(rowRegistrationOrLogin));
         keyboard.setResizeKeyboard(true);
         keyboard.setOneTimeKeyboard(true);
         return keyboard;
@@ -81,27 +80,26 @@ public class KeyboardService {
         InlineKeyboardButton menuButton = createInlineButton(textMessageService.getText("button.menu"), QueryData.MENU);
         InlineKeyboardButton likeButton = createInlineButton(textMessageService.getText("button.search.like"), QueryData.LIKE);
 
-        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(nextButton, menuButton, likeButton);
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(buttonsRow);
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        inlineKeyboardMarkup.setKeyboard(keyboard);
-        return inlineKeyboardMarkup;
+        return getInlineKeyboardMarkup(nextButton, menuButton, likeButton);
     }
 
 
     public InlineKeyboardMarkup getFavoritesKeyboard() {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         InlineKeyboardButton prevButton = createInlineButton(textMessageService.getText("button.favorites.prev"), QueryData.PREV);
         InlineKeyboardButton nextButton = createInlineButton(textMessageService.getText("button.next"), QueryData.NEXT);
         InlineKeyboardButton menuButton = createInlineButton(textMessageService.getText("button.menu"), QueryData.MENU);
         InlineKeyboardButton dislikeButton = createInlineButton(textMessageService.getText("button.favorites.dislike"), QueryData.DISLIKE);
 
-        List<InlineKeyboardButton> buttonsRow = createInlineButtonsRow(prevButton, nextButton, menuButton, dislikeButton);
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(buttonsRow);
-        inlineKeyboardMarkup.setKeyboard(keyboard);
+        return getInlineKeyboardMarkup(prevButton, nextButton, menuButton, dislikeButton);
+    }
 
-        return inlineKeyboardMarkup;
+    public ReplyKeyboardMarkup getInitKeyboard() {
+        KeyboardRow rowRegistrationOrLogin = new KeyboardRow();
+        rowRegistrationOrLogin.add(new KeyboardButton("/start"));
+        ReplyKeyboardMarkup keyboard = new ReplyKeyboardMarkup();
+        keyboard.setKeyboard(Collections.singletonList(rowRegistrationOrLogin));
+        keyboard.setResizeKeyboard(true);
+        keyboard.setOneTimeKeyboard(true);
+        return keyboard;
     }
 }
